[gd_scene load_steps=2 format=3 uid="uid://bp2ftn6s7u24w"]

[ext_resource type="Script" uid="uid://cewt3dtmd42g0" path="res://scripts/ui/PauseMenu.gd" id="1_vb6pq"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_vb6pq")

[node name="blackbackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5019608)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 103.00001
offset_top = 48.00006
offset_right = 203.0
offset_bottom = 149.00006
grow_vertical = 2
scale = Vector2(2.335, 2.335)

[node name="BtnResume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="BtnRestart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="BtnQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to Title"
